--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -1,1 +1,31 @@
 // place for all variables, mixins, functions, etc
+
+// google fonts api poppins
+@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+$background-color: #121212;
+$accent-color:  #1e1e1f;
+$form-background-color: #1e1e1f;
+
+$tag-color: #1e1e1f;
+$button-color: #ffff;
+$button-text-color: #1e1e1f;
+
+$hover-color: #ffff;
+$hover-text-color: #ffff;
+
+$text-color: #d6d6d6;
+$text-heading-color: #ffff;
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", serif;
+}
+body{
+    max-width: 1350px;
+    margin-left: auto;
+    margin-right: auto;
+}
