added animations to main navbar

--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@ nav {
 }
 
 .navbarContent {
-  padding: 0.5rem;
+  padding: 0.5rem 0.8rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -37,6 +37,10 @@ nav {
   font-weight: 600;
   letter-spacing: 0.1rem;
   color: white;
+  transition: transform 0.5s ease;
+}
+.navbarContent .logo:hover {
+  transform: scale(0.95);
 }
 .navbarContent .linksContent {
   display: none;
@@ -46,11 +50,16 @@ nav {
   border: none;
   background: transparent;
   display: inline-flex;
+  cursor: pointer;
 }
 
 .sun-svg {
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
+  transition: transform 0.8s ease-in-out;
+}
+.sun-svg:hover {
+  transform: rotate(180deg) scale(0.85);
 }
 .sun-svg path {
   stroke: white;
