--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,7 +8,7 @@ nav{
 
 // navbar content styles
 .navbarContent{
-    padding: 0.5rem;
+    padding: 0.5rem 0.8rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -19,6 +19,11 @@ nav{
         font-weight: 600;
         letter-spacing: 0.1rem;
         color: $text-heading-color;
+        transition: transform 0.5s ease;
+
+        &:hover{
+            transform: scale(0.95);
+        }
     }
 
     .linksContent{
@@ -31,17 +36,23 @@ nav{
         // line-height: 1; //this is another work around
         background: transparent;
         display: inline-flex;
+        cursor: pointer;
     }
 
 }
 
 .sun-svg{
-    width: 20px;
-    height: 20px;
+    width: 22px;
+    height: 22px;
+    transition: transform 0.8s ease-in-out;
+
+    &:hover{
+        transform: rotate(180deg) scale(0.85);
+    }
+
     path{
         stroke: $text-heading-color;
     }
-
 }
 
 
