--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,6 @@
 @import 'config';
 
-nav{
+.navbar{
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
 }
@@ -41,6 +41,7 @@ nav{
 
 }
 
+// animate sun svg
 .sun-svg{
     width: 22px;
     height: 22px;
@@ -55,6 +56,43 @@ nav{
     }
 }
 
+// add styles to fixed navbar for mobile view
+#mobileNav{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 99;
+}
 
+.mobileLinksContent{
+    display: flex;
+    list-style: none;
+    // background: lightblue;
+    border-top: 1px solid $accent-color;
+    padding: 0.8rem 1.5rem;
+    align-items: center;
+    justify-content: space-between;
+
+    li{
+        transition: opacity 0.4s ease;
+    }
+
+    .navLink{
+        color: $text-heading-color;
+        padding: 1rem;
+    }
+
+    &:hover > :not(:hover){
+        opacity: 0.65;
+    }
+}
+
+
+
+// placeholder to allow page to scroll
+html{
+    margin-bottom: 1000px
+}
 
 @import 'responsive';
