--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -1,1 +1,34 @@
 // holds all media queries
+@media (min-width: $sz1){// 320px
+
+}
+@media (min-width: $sz2){// 480px
+
+}
+@media (min-width: $sz3){// 576px
+
+}
+@media (min-width: $sz4){// 768px
+
+}
+@media (min-width: $sz5){// 992px
+
+}
+@media (min-width: $sz6){// 1024px
+
+}
+@media (min-width: $sz7){// 1200px
+
+}
+@media (min-width: $sz8){// 1400px
+    
+}
+
+
+
+
+
+
+
+
+
