--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,7 +22,7 @@
         transition: transform 0.5s ease;
 
         &:hover{
-            transform: scale(0.95);
+            transform: scale(0.9);
         }
     }
 
@@ -33,7 +33,6 @@
     #themeToggle{
         outline: none;
         border: none;
-        // line-height: 1; //this is another work around
         background: transparent;
         display: inline-flex;
         cursor: pointer;
@@ -66,25 +65,22 @@
 }
 
 .mobileLinksContent{
-    display: flex;
-    list-style: none;
-    // background: lightblue;
+    @include horizontalList;
     border-top: 1px solid $accent-color;
     padding: 0.8rem 1.5rem;
-    align-items: center;
-    justify-content: space-between;
 
+    // apply hover effect on mobile nav
     li{
         transition: opacity 0.4s ease;
+    }
+    &:hover > :not(:hover){
+        opacity: 0.55;
     }
 
     .navLink{
         color: $text-heading-color;
         padding: 1rem;
-    }
-
-    &:hover > :not(:hover){
-        opacity: 0.65;
+        font-size: 0.875rem;
     }
 }
 
