--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@ a {
 }
 
 .navbarContent {
-  padding: 0.5rem 0.8rem;
+  padding: 0.5rem 1.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -71,6 +71,8 @@ a {
   bottom: 0;
   width: 100%;
   z-index: 99;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 
 .mobileLinksContent {
