--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,7 +26,14 @@
     }
 
     .linksContent{
+        @include horizontalList;
         display: none;
+        max-width: 25rem;
+        flex-grow: 0.3;
+            a{
+                color: $text-heading-color;
+                font-size: $md;
+            }
     }
 
     #themeToggle{
@@ -61,26 +68,18 @@
     bottom: 0;
     width: 100%;
     z-index: 99;
+    border-top: 1px solid $accent-color;
     @include frostedBackground;
 }
 
 .mobileLinksContent{
     @include horizontalList;
-    border-top: 1px solid $accent-color;
     padding: 0.8rem 1.5rem;
-
-    // apply hover effect on mobile nav
-    li{
-        transition: opacity 0.4s ease;
-    }
-    &:hover > :not(:hover){
-        opacity: 0.55;
-    }
 
     .navLink{
         color: $text-heading-color;
         padding: 1rem;
-        font-size: 0.875rem;
+        font-size: $md;
     }
 }
 
