--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -3,20 +3,39 @@
 // google fonts api poppins
 @import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-// color variables
-$background-color: #121212;
-$accent-color:  #1e1e1f;
-$form-background-color: #1e1e1f;
+// color variables (using css vairables for colors since it has to be dynamically changed in JS.
+:root{
+    --background-color: #121212;
+    --accent-color:  #1e1e1f;
+    --form-background-color: #1e1e1f;
+    
+    --tag-color: #1e1e1f;
+    --button-color: #ffff;
+    --button-text-color: #1e1e1f;
+    
+    --hover-color: #ffff;
+    --hover-text-color: #ffff;
+    
+    --text-color: #d6d6d6;
+    --text-heading-color: #ffff;
+}
 
-$tag-color: #1e1e1f;
-$button-color: #ffff;
-$button-text-color: #1e1e1f;
 
-$hover-color: #ffff;
-$hover-text-color: #ffff;
-
-$text-color: #d6d6d6;
-$text-heading-color: #ffff;
+[data-theme = 'light']{
+    --background-color: #c529b8;
+    --accent-color:  #1e1e1f;
+    --form-background-color: #1e1e1f;
+    
+    --tag-color: #1e1e1f;
+    --button-color: #ffff;
+    --button-text-color: #1e1e1f;
+    
+    --hover-color: #ffff;
+    --hover-text-color: #ffff;
+    
+    --text-color: #d6d6d6;
+    --text-heading-color: #ffff;
+}
 
 // media queries
 $sz1: 20rem;
@@ -44,8 +63,7 @@ $xxlg: 2.813rem; //45px
     font-family: "Poppins", serif;
 }
 body{
-
-    background: $background-color;
+    background: var(--background-color);
 }
 
 .siteContainer{
