--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -31,6 +31,7 @@
     // make main navbar fixed to top of screen
     .navbar{
         position: fixed;
+        z-index: 99;
         width: 100%;
         top: 0;
         left: 0;
