--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+:root {
+  --background-color: #121212;
+  --accent-color: #1e1e1f;
+  --form-background-color: #1e1e1f;
+  --tag-color: #1e1e1f;
+  --button-color: #ffff;
+  --button-text-color: #1e1e1f;
+  --hover-color: #ffff;
+  --hover-text-color: #ffff;
+  --text-color: #d6d6d6;
+  --text-heading-color: #ffff;
+}
+
+[data-theme=light] {
+  --background-color: #c529b8;
+  --accent-color: #1e1e1f;
+  --form-background-color: #1e1e1f;
+  --tag-color: #1e1e1f;
+  --button-color: #ffff;
+  --button-text-color: #1e1e1f;
+  --hover-color: #ffff;
+  --hover-text-color: #ffff;
+  --text-color: #d6d6d6;
+  --text-heading-color: #ffff;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,7 +33,7 @@
 }
 
 body {
-  background: #121212;
+  background: var(--background-color);
 }
 
 .siteContainer {
@@ -36,7 +62,7 @@ a {
   font-size: 1rem;
   font-weight: 600;
   letter-spacing: 0.1rem;
-  color: white;
+  color: var(--text-heading-color);
   transition: transform 0.5s ease;
 }
 .navbarContent .logo:hover {
@@ -61,7 +87,7 @@ a {
   opacity: 0.55;
 }
 .navbarContent .linksContent a {
-  color: white;
+  color: var(--text-heading-color);
   font-size: 0.875rem;
 }
 .navbarContent #themeToggle {
@@ -81,7 +107,7 @@ a {
   transform: rotate(180deg) scale(0.85);
 }
 .sun-svg path {
-  stroke: white;
+  stroke: var(--text-heading-color);
 }
 
 #mobileNav {
@@ -90,7 +116,7 @@ a {
   bottom: 0;
   width: 100%;
   z-index: 99;
-  border-top: 1px solid #1e1e1f;
+  border-top: 1px solid var(--accent-color);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
 }
@@ -112,7 +138,7 @@ a {
   opacity: 0.55;
 }
 .mobileLinksContent .navLink {
-  color: white;
+  color: var(--text-heading-color);
   padding: 1rem;
   font-size: 0.875rem;
 }
@@ -134,6 +160,7 @@ html {
   }
   .navbar {
     position: fixed;
+    z-index: 99;
     width: 100%;
     top: 0;
     left: 0;
