--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,7 +18,8 @@
         font-weight: 600;
         letter-spacing: 0.1rem;
         color: var(--text-heading-color);
-        transition: transform 0.5s ease;
+        // transition: transform 0.5s ease;
+        transition: color, transform $transition-duration ease;
 
         &:hover{
             transform: scale(0.9);
@@ -33,6 +34,7 @@
             a{
                 color: var(--text-heading-color);
                 font-size: $md;
+                transition: color $transition-duration ease;
             }
     }
 
@@ -51,7 +53,6 @@
     width: 22px;
     height: 22px;
     transition: transform 0.8s ease-in-out;
-
     &:hover{
         transform: rotate(180deg) scale(0.85);
     }
