--- a/styles/main.css
+++ b/styles/main.css
@@ -62,7 +62,7 @@ a {
   font-weight: 600;
   letter-spacing: 0.1rem;
   color: var(--text-heading-color);
-  transition: color, transform 0.4s ease;
+  transition: color 0.4s ease, transform 0.5s ease;
 }
 .navbarContent .logo:hover {
   transform: scale(0.9);
@@ -141,6 +141,10 @@ a {
   color: var(--text-heading-color);
   padding: 1rem;
   font-size: 0.875rem;
+}
+
+#mainSection {
+  background: red;
 }
 
 html {
