--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -36,6 +36,12 @@
         top: 0;
         left: 0;
     }
+
+
+    // main Section
+    #mainSection{
+        margin-top: 3.188rem;
+    }
 }
 @media (min-width: $sz5){// 992px
 
