--- a/styles/main.css
+++ b/styles/main.css
@@ -229,9 +229,9 @@ a {
 
 .rightSectionContent {
   display: grid;
-  gap: 1rem; /* Space between grid items */
+  gap: 0.5rem; /* Space between grid items */
   grid-template-columns: repeat(3, 1fr);
-  background-color: aliceblue;
+  margin-top: 2.5rem;
 }
 .rightSectionContent .langCard {
   background: var(--accent-color);
