--- a/styles/main.scss
+++ b/styles/main.scss
@@ -182,13 +182,14 @@
 }
 .rightSectionContent{
     display: grid;
-    gap: 1rem; /* Space between grid items */
+    gap: 0.5rem; /* Space between grid items */
     grid-template-columns: repeat(3, 1fr);
+
+    margin-top: 2.5rem;
 
     // max-width: 450px;
     // margin-left: auto;
     // margin-right: auto;
-    background-color: aliceblue;
 
     .langCard{
         background: var(--accent-color);
