--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,13 @@
   --text-color: #d6d6d6;
   --tag-text-color: #ffffff;
   --text-heading-color: #ffff;
+  --headingFontSize: 2.188rem;
+  --blockTextFontSize: 0.75rem;
+  --tagFontSize: 0.75rem;
+  --logoFontSize: 1rem;
+  --subHeadingFontSize: 1.25rem;
+  --linksFontSize: 0.75rem;
+  --buttonFontSize: 0.75rem;
 }
 
 [data-theme=light] {
@@ -54,7 +61,7 @@ a {
 }
 .navbarContent .logo {
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: var(--logoFontSize);
   font-weight: 600;
   letter-spacing: 0.1rem;
   color: var(--text-heading-color);
@@ -83,7 +90,7 @@ a {
 }
 .navbarContent .linksContent a {
   color: var(--text-heading-color);
-  font-size: 0.875rem;
+  font-size: var(--linksFontSize);
   transition: color 0.4s ease;
 }
 .navbarContent #themeToggle {
@@ -111,6 +118,7 @@ a {
   left: 0;
   bottom: 0;
   width: 100%;
+  max-width: 100vw;
   z-index: 99;
   border-top: 1px solid var(--accent-color);
   backdrop-filter: blur(10px);
@@ -135,8 +143,8 @@ a {
 }
 .mobileLinksContent .navLink {
   color: var(--text-heading-color);
-  padding: 1rem;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
+  font-size: var(--linksFontSize);
 }
 
 #mainSection {
@@ -145,7 +153,7 @@ a {
 }
 
 .leftSectionContent .title {
-  font-size: 2.813rem;
+  font-size: var(--headingFontSize);
   color: var(--text-heading-color);
   font-weight: 600;
   transition: color 0.4s ease;
@@ -166,7 +174,7 @@ a {
 .leftSectionContent .location p {
   margin-left: 3px;
   display: inline;
-  font-size: 0.75rem;
+  font-size: var(--tagFontSize);
   color: var(--text-color);
   transition: color 0.4s ease;
 }
@@ -174,7 +182,7 @@ a {
   color: var(--tag-text-color);
   transition: color 0.4s ease;
   display: flex;
-  font-size: 0.75rem;
+  font-size: var(--tagFontSize);
   margin-bottom: 20px;
 }
 .leftSectionContent .skillTags .tag {
@@ -189,7 +197,7 @@ a {
 .leftSectionContent .aboutMeText {
   color: var(--text-color);
   transition: color 0.4s ease;
-  font-size: 0.875rem;
+  font-size: var(--blockTextFontSize);
   max-width: 500px;
 }
 .leftSectionContent .viewProjectsCTA {
@@ -199,7 +207,7 @@ a {
   border-radius: 20px;
   display: inline-flex;
   align-items: center;
-  font-size: 0.875rem;
+  font-size: var(--buttonFontSize);
   transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
   margin-top: 25px;
 }
@@ -230,6 +238,7 @@ a {
 .rightSectionContent {
   display: grid;
   gap: 0.5rem; /* Space between grid items */
+  justify-content: center;
   grid-template-columns: repeat(3, 1fr);
   margin-top: 2.5rem;
 }
@@ -246,10 +255,6 @@ a {
 }
 .rightSectionContent .langCard img {
   width: 35px;
-}
-
-html {
-  margin-bottom: 1000px;
 }
 
 @media (min-width: 48rem) {
@@ -272,6 +277,11 @@ html {
   }
   #mainSection {
     margin-top: 3.188rem;
+  }
+}
+@media (min-width: 75rem) {
+  :root {
+    --test: 80px;
   }
 }
 @media (min-width: 87.5rem) {
