fixed styles for screen size 320px

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,7 @@
   --text-heading-color: #ffff;
   --headingFontSize: 2.188rem;
   --blockTextFontSize: 0.75rem;
-  --tagFontSize: 0.75rem;
+  --tagFontSize: 0.688rem;
   --logoFontSize: 1rem;
   --subHeadingFontSize: 1.25rem;
   --linksFontSize: 0.75rem;
@@ -147,7 +147,7 @@ a {
 }
 
 #mainSection {
-  margin-top: 0;
+  margin-top: 1.875rem;
   padding: 0 1.5rem;
 }
 
@@ -159,12 +159,12 @@ a {
 }
 .leftSectionContent .location {
   display: flex;
-  margin-top: -10px;
+  margin-top: -7px;
   margin-bottom: 10px;
 }
 .leftSectionContent .location svg {
-  width: 17px;
-  height: 17px;
+  width: 15px;
+  height: 15px;
 }
 .leftSectionContent .location svg path {
   stroke: var(--text-color);
@@ -212,9 +212,9 @@ a {
 }
 .leftSectionContent .viewProjectsCTA svg {
   transform: rotate(-40deg);
-  margin-left: 0.5rem;
-  width: 19px;
-  height: 19px;
+  margin-left: 0.2rem;
+  width: 17px;
+  height: 17px;
   transition: transform 0.3s ease;
 }
 .leftSectionContent .viewProjectsCTA svg path {
@@ -238,15 +238,15 @@ a {
   display: grid;
   gap: 0.5rem; /* Space between grid items */
   justify-content: center;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   margin-top: 2.5rem;
 }
 .rightSectionContent .langCard {
   background: var(--accent-color);
   border-radius: 10px;
-  padding: 2rem 2.5rem;
+  padding: 1rem 1.5rem;
   width: min-content;
-  min-width: 120px;
+  min-width: 100px;
   max-height: 90px;
   display: flex;
   align-items: center;
@@ -254,6 +254,7 @@ a {
 }
 .rightSectionContent .langCard img {
   width: 35px;
+  height: 40px;
 }
 
 @media (min-width: 48rem) {
