--- a/styles/main.scss
+++ b/styles/main.scss
@@ -50,8 +50,9 @@
 
 // animate sun svg
 .sun-svg{
-    width: 22px;
-    height: 22px;
+    $svgSize: 22px;
+    width: $svgSize;
+    height: $svgSize;
     transition: transform 0.8s ease-in-out;
     &:hover{
         transform: rotate(180deg) scale(0.85);
@@ -89,7 +90,7 @@
 
 // main section styles
 #mainSection{
-    margin-top: 0;
+    margin-top: 1.875rem;
     padding: 0 1.5rem;
 }
 
@@ -104,16 +105,19 @@
 
     .location{
         display: flex;
-        margin-top: -10px;
+        margin-top: -7px;
         margin-bottom: 10px;
         svg{
-            width: 17px;
-            height: 17px;
+            $svgSize: 15px;
+            width: $svgSize;
+            height: $svgSize;
+
             path{
                 stroke: var(--text-color);
                 transition: stroke $transition-duration ease;
             }
         }
+
         p{
             margin-left: 3px;
             display: inline;
@@ -154,9 +158,11 @@
 
         svg{
             transform: rotate(-40deg);
-            margin-left: 0.5rem;
-            width: 19px;
-            height: 19px;
+            margin-left: 0.2rem;
+
+            $svgSize: 17px;
+            width: $svgSize;
+            height: $svgSize;
             transition: transform 0.3s ease;
             
             path{
@@ -185,7 +191,7 @@
     display: grid;
     gap: 0.5rem; /* Space between grid items */
     justify-content: center;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 
     margin-top: 2.5rem;
 
@@ -197,9 +203,13 @@
         background: var(--accent-color);
         border-radius: 10px;
 
-        padding: 2rem 2.5rem;
+        // padding: 2rem 2.5rem;
+        padding: 1rem 1.5rem;
+
+
         width: min-content;
-        min-width: 120px;
+        // min-width: 120px;
+        min-width: 100px;
         max-height: 90px;
 
         display: flex;
@@ -207,6 +217,7 @@
         justify-content: center;
         img{
             width: 35px;
+            height: 40px
         }
     }
 }
